# akustik

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CMakeLists.txt  LICENSE.txt  README.md  conanfile.py  pyproject.toml  run_2d.sh
.github/workflows/: cpp.yml  pre-commit.yml  python.yml
data/: driver.csv
doc/: from_scratch_monitor_speaker.md  from_scratch_music_studio.md
src/cpp/: CMakeLists.txt
src/cpp/akustik/: engine_native_2d.cpp  engine_native_2d.hpp  engine_sycl_2d.cpp  engine_sycl_2d.hpp  exception.hpp  hdf.hpp  simulation_2d.cpp  simulation_2d.hpp  sycl.hpp  video.cpp  video.hpp
src/cpp/engine/: CMakeLists.txt  main.cpp
src/python/akustik/: cli.py  loudness.py
src/python/akustik/absorber/: cli.py  tubetrap.py
src/python/akustik/analysis/: modes.py
src/python/akustik/anc/: cli.py
src/python/akustik/diffusor/: cli.py  design.py  measurement.py  prd.py  qrd.py
src/python/akustik/frequency/: octave.py
src/python/akustik/material/: cli.py  load.py
src/python/akustik/plot/: style.py
src/python/akustik/room/: cli.py  decay.py  modes.py  rectangular.py
src/python/akustik/speaker/: alignment.py  cli.py  crossover.py  dats.py  power.py  thiele_small.py
src/python/akustik/wave/: cli.py  report2d.py  sim2d.py
src/python/tests/: test_analysis_modes.py  test_diffusor.py  test_frequency.py  test_loudness.py  test_room_decay.py  test_room_rectangular.py  test_speaker_dats.py  test_speaker_power.py  test_speaker_thiele_small.py  test_thiele_small.py
src/python/tests/data/dats/: README.md
src/python/tests/data/dats/RSS390HF-4/FRD/: RSS390HF-4@0.frd
src/python/tests/data/dats/RSS390HF-4/ZMA/: RSS390HF-4.zma
