[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "akustik"
version = "0.1.0"
description = "Acoustic simulations"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [{ name = "Tobias Hienzsch", email = "post@tobias-hienzsch.de" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.7",
    "matplotlib>=3.9.1",
    "numba>=0.60.0",
    "numpy>=2.0.1",
    "pandas>=2.2.2",
    "resampy>=0.4.3",
    "scipy>=1.14.0",
    "sympy>=1.13.1",
]

[project.urls]
Homepage = "https://github.com/tobanteAudio/akustik"
Issues = "https://github.com/tobanteAudio/akustik/issues"

[project.optional-dependencies]
dev = ["conan", "pre-commit"]
test = ["pytest", "pytest-cov"]

[project.scripts]
akustik = "akustik.cli:main"

[tool.setuptools.packages.find]
where = ["src/python"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["src/python/tests/*"]
